# kubeswift

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  NOTICE  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  kubeswift_architecture.rtf  kubeswift_context.md  swiftgpu_design_sketch.md
.claude/: CLAUDE.md  qa-engineer.md  rust-runtime-engineer.md  security-engineer.md  staff-architect.md  technical-writer.md
docs/: README.md  ai-context.md  architecture.md  console-inspiration-virtctl-ch.md  console-troubleshooting.md  crds.md  deploy.md  development.md  first-boot.md  gpu-passthrough.md  guest-networking-ssh.md  guest-networking-troubleshooting.md  index.md  kernel-boot-quickstart.md  multi-nic.md  operator-checklist-ubuntu-x86_64.md  quickstart.md  releases.md  repo-layout.md  security-audit.md  security-hardening-notes.md  seed-rendering.md  smoke-verification.md  swiftctl.md  swiftguest-reconcile.md  swiftguestpool-guide.md  swiftguestpool-use-cases.md  swiftkernel.md  swiftletd-mvp.md  validation-guest-networking-status.md  virtiofs.md  worker-node-preflight.md
hack/: chart-version.sh  verify-crd-sync.sh  version.sh
openspec/: CLEANUP_PLAN.md  config.yaml
rust/: Cargo.toml
rust/swift-qemu-client/: Cargo.toml
rust/swift-qemu-client/examples/: hgx_tier2_args.rs
rust/swift-qemu-client/src/: config.rs  lib.rs  pinning.rs  qmp.rs
rust/swiftletd/: Cargo.toml  build.rs
rust/swiftletd/scripts/: gpu-init.sh  launcher-entrypoint.sh  network-init.sh
rust/swiftletd/src/: action.rs  intent.rs  kube_client.rs  launch.rs  lease.rs  main.rs  report.rs
(+1083 files in other folders)
